--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
   <!--Placeholder link-->
   <a href="#">This is a placeholder link, goes no where, for now</a>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <script src="script.js"></script>
+
+<!-- hello world -->
 
 </body>
 
