updated ajax calls

--- a/index.html
+++ b/index.html
@@ -8,28 +8,44 @@
 
 <body>
 
-  <!-- Header -->
-  <h1>Hello World!</h1>
-
+  
+  
   <!-- Image -->
   <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
   <br>
+  
+  <!-- Header -->
+  <h2>Age: <span id="age"></span>
+  </h2>
+  
+  <h2>Gender: <span id="gender"></span>
+  </h2>
+  
+  <h2>%Surprise: <span id="surprisepercent"></span>
+  </h2>
+  
+  <h2>%Anger <span id="sadnesspercent"></span>
+  </h2>
+  
+  <h2>%Fear <span id="angerpercent"></span>
+  </h2>
+  
+  <h2>%Neutral <span id="neutralpercent"></span>
+  </h2>
+  
+  <h2>%Happy <span id="happinesspercent"></span>
+  </h2>
+  
+  <h2>%Disgust <span id="disgustpercent"></span>
+  </h2>
 
-  <!-- Link with New Tab -->
-  <a href="https://www.google.com" target="_blank">Opens new tab</a>
-  <br>
-
-  <!-- Bold Link -->
-  <strong><a href="https://www.youtube.com">This is a bold link</a></strong>
-  <br>
-
-  <!--Placeholder link-->
-  <a href="#">This is a placeholder link, goes no where, for now</a>
+  
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 
-<!-- hello world -->
+
 
 </body>
 
