--- a/index1.html
+++ b/index1.html
@@ -118,6 +118,23 @@
     </script>
 
 
+<img class="image" src="assets/images/image.jpg"/>
+ 
+  <div class="square"></div>
+<div class= "container">
+    <div class="row">
+        <div class="col_md_1"></div>
+        <div class="col_md_5"></div>
+        <div class="col_md_5">
+                <div class="row"><p>blsfhjfdzjkgakjfhnsvafjkdgsghfdsjfgkagfsaYDFSGAKUHS;GLJGDSKLJGASHJGDKLHFLKgkljlo</p> </div>
+                <div class="row"> <div id="chartdiv"></div>    
+        </div>
+        <div class="col_md_1"></div>
+    </div>
+    
+
+</div>
+</div>
 
 
 
