--- a/index2.html
+++ b/index2.html
@@ -45,37 +45,15 @@
     </nav>
 
 
-
-<div class="container">
-
-    <div class=row hero-image>
-      <div class="hero-text">
-        <h1 style="font-size:50px">Welcome to Facetube</h1>
-        <h3>Upload your photo and find out your video of the day!</h3>
+    <div>
+      
+      <iframe  class="video" src="https://www.youtube.com/embed/o97R6ObA0iQ?autoplay=1&mute=1"  autoplay="1" frameborder="0" allowfullscreen></iframe>
+<h2 id="quote">You look sad !Here is some motivation</h2>
+</div>
 
 
 
-        <p><input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)" style="display: none;">
-        </p>
-        <button type="button" class="btn btn-success">
-          <label for="file" style="cursor: pointer;">Upload Image</label>
-          </span>
-        </button>
-
-        <p><img id="output" width="950" height="600" /></p>
-        <div>
-
-
-          <script>
-            var loadFile = function (event) {
-              var image = document.getElementById('output');
-              image.src = URL.createObjectURL(event.target.files[0]);
-              console.log($('#output').attr('src'));
-
-              var x = $('#output').attr('src');
-              $('body').append('<img src="' + x + '"/>')
-            };
-          </script>
+      
 
 
 
