--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     .hero-text {
       text-align: center;
       top: 50%;
-      left: 70%;
+      right: 70%;
       transform: translate(-50%, -50%);
       color: white;
-      position: absolute;
+  
     }
   </style>
 </head>
@@ -57,12 +57,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
           </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-          </ul>
+        </ul>
         </div>
         <!--/.nav-collapse -->
       </div>
