--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       <!--/.container-fluid -->
     </nav>
 
+
+    
     <div class="hero-image">
       <div class="hero-text">
         <h1 style="font-size:50px">Welcome to Facetube</h1>
@@ -78,6 +80,9 @@
         </div>
       </div>
     </div>
+
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="script.js"></script>
 </body>
